update with editable title/caption

--- a/src/main/resources/templates/view/client/login.html
+++ b/src/main/resources/templates/view/client/login.html
@@ -30,7 +30,7 @@
          <!-- /.login-logo -->
          <div class="card">
             <div class="card-body">
-               <p>For testing: user1@gmail.com | user1</p>
+               <p>For testing: user1@mail.com | user1</p>
                <div id="commonError" class="alert alert-danger" th:style="${param.error != null? '' : 'display:none'}">
                   Invalid login information. Please check again.
                </div>
