--- a/src/main/resources/templates/layout/client/main.html
+++ b/src/main/resources/templates/layout/client/main.html
@@ -13,8 +13,10 @@
         <link rel="stylesheet" th:href="@{/resources/plugins/fontawesome-free/css/all.min.css}">
         <!-- Theme style -->
         <link rel="stylesheet" th:href="@{/resources/css/adminlte.min.css}">
+        <link rel="stylesheet" th:href="@{/resources/css/other.css}">
         <!-- Google Font: Source Sans Pro -->
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+        <link rel="icon" th:href="@{/resources/favicon.png}">
     </head>
 
     <body class="hold-transition sidebar-mini">
@@ -151,7 +153,7 @@
             <aside class="main-sidebar sidebar-dark-olive elevation-4">
                 <!-- Brand Logo -->
                 <a href="/" class="brand-link">
-                    <img th:src="@{/resources/img/AdminLTELogo.png}" alt="AdminLTE Logo"
+                    <img th:src="@{/resources/favicon.png}" alt="AdminLTE Logo"
                         class="brand-image img-circle elevation-3" style="opacity: .8">
                     <span class="brand-text font-weight-light"><b>TODO</b> <sup style="top: -0.4rem;">HT</sup></span>
                 </a>
@@ -328,13 +330,15 @@
         <!-- jQuery -->
         <script th:src="@{/resources/plugins/jquery/jquery.min.js}"></script>
         <!-- Bootstrap 4 -->
+        <script th:src="@{/resources/plugins/popper/umd/popper.min.js}"></script>
         <script th:src="@{/resources/plugins/bootstrap/js/bootstrap.bundle.min.js}"></script>
         <!-- AdminLTE App -->
         <script th:src="@{/resources/js/adminlte.min.js}"></script>
 
-        <th:block>
+        <th:block layout:fragment="scripts">
 
         </th:block>
+
     </body>
 
 </html>
