--- a/src/main/resources/templates/layout/client/main.html
+++ b/src/main/resources/templates/layout/client/main.html
@@ -300,10 +300,10 @@
         <footer class="main-footer" layout:fragment="footer">
             <!-- To the right -->
             <div class="float-right d-none d-sm-inline">
-                Anything you want
+                <!-- Anything you want -->
             </div>
             <!-- Default to the left -->
-            <strong>Copyright &copy; 2020 <a href="https://adminlte.io">AdminLTE.io</a>.</strong> All rights reserved.
+            <strong>Copyright &copy; 2020 <a href="mailto:thienhaigioi@gmail.com">NPHT</a>.</strong>
         </footer>
     </div>
     <!-- ./wrapper -->
